src/test/ui/parser/keyword-typeof.rs
fn main() {
    let typeof = (); //~ ERROR expected pattern, found reserved keyword `typeof`
}
